# tfg-model

./: .gitignore  pyproject.toml
outputs/2026-02-25/16-38-32/.hydra/: config.yaml  hydra.yaml
outputs/2026-02-26/18-53-12/.hydra/: hydra.yaml
outputs/2026-02-26/18-53-44/.hydra/: config.yaml  hydra.yaml
outputs/2026-02-26/18-54-03/.hydra/: hydra.yaml
tfg-model/: config.py  graph_to_tuple.py  train.py
tfg-model/data/: __init__.py  graphs_tuple.py
tfg-model/modules/: body.py  embeddings.py  gnn_layer.py  model.py  projection.py
tfg_model/: dataset.py  engine.py  main.py  trainer.py
tfg_model/conf/: config.yaml
tfg_model/memory/: trajectory.py
tfg_model/model/: __init__.py  base.py  body.py  conjecturer.py  prover.py
