[tool.poetry]
name = "tfg-model"
version = "0.1.0"
description = ""
authors = ["Carlos Fernandez <carlos.ferlo@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
jax = "^0.9.2"
flax = "^0.12.6"
optax = "^0.2.8"
implica = ">=1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
